Resolves: fdo#68600 limit comment width

Change-Id: I7060ae18a98e0793a936834b398f1e232d336672