sfx2/source/dialog/dinfdlg.cxx
@@ -626,7 +626,6 @@ bool SfxDocumentInfoItem::PutValue( const Any& rVal, sal_uInt8 nMemberId )
     return bRet;
 }
 
-
 SfxDocumentDescPage::SfxDocumentDescPage( Window * pParent, const SfxItemSet& rItemSet )
     : SfxTabPage(pParent, "DescriptionInfoPage", "sfx/ui/descriptioninfopage.ui", rItemSet)
     , m_pInfoItem   ( NULL )
@@ -636,8 +635,9 @@ SfxDocumentDescPage::SfxDocumentDescPage( Window * pParent, const SfxItemSet& rI
     get(m_pThemaEd, "subject");
     get(m_pKeywordsEd, "keywords");
     get(m_pCommentEd, "comments");
+    m_pCommentEd->set_width_request(m_pKeywordsEd->get_preferred_size().Width());
+    m_pCommentEd->set_height_request(m_pCommentEd->GetTextHeight() * 16);
 }
-
 
 SfxTabPage *SfxDocumentDescPage::Create(Window *pParent, const SfxItemSet &rItemSet)
 {
